Improve command metadata defaults