@@ -1,20 +1,25 @@
-// src/main/java/de/pixelrpg/rpg/command/SubCommand.java
 package de.pixelrpg.rpg.command;
 
 import org.bukkit.command.CommandSender;
 
-import java.util.Collections;
 import java.util.List;
 
 public interface SubCommand {
-
     String name();
 
     String permission();
 
     boolean execute(CommandSender sender, String[] args);
 
+    default String description() {
+        return "";
+    }
+
+    default String usage() {
+        return "/rpgadmin " + name();
+    }
+
     default List<String> tabComplete(CommandSender sender, String[] args) {
-        return Collections.emptyList();
+        return List.of();
     }
 }
